# gdut-design

./: .gitignore  BUILD.gn  filenames.auto.gni  filenames.gni  tsconfig.json
.history/: BUILD_20220217231829.gn  BUILD_20220218112434.gn  BUILD_20220218112435.gn  BUILD_20220218113639.gn  BUILD_20220218113641.gn  BUILD_20220218113642.gn  BUILD_20220218115118.gn  BUILD_20220218120403.gn  BUILD_20220218120406.gn  BUILD_20220218120409.gn  BUILD_20220218120413.gn  BUILD_20220218120414.gn  BUILD_20220218120416.gn  BUILD_20220218120419.gn  BUILD_20220218120927.gn  BUILD_20220218120952.gn  BUILD_20220218120955.gn  BUILD_20220218121558.gn  BUILD_20220218121601.gn  BUILD_20220218121725.gn  BUILD_20220218123246.gn  BUILD_20220218132542.gn  BUILD_20220218132545.gn  BUILD_20220218132547.gn  BUILD_20220218132848.gn  BUILD_20220220201322.gn  BUILD_20220220202447.gn  BUILD_20220220202448.gn  BUILD_20220220202451.gn  BUILD_20220220202558.gn  BUILD_20220220202602.gn  BUILD_20220220202606.gn  BUILD_20220220202732.gn  BUILD_20220220205302.gn  BUILD_20220220212959.gn  BUILD_20220220213128.gn  BUILD_20220225180752.gn  BUILD_20220225180754.gn  BUILD_20220225180755.gn  BUILD_20220225180858.gn  (+145 more)
.history/shell/: native_window_20220224204403.cc  native_window_20220224204409.cc  native_window_20220224204417.cc  native_window_20220224204421.cc  native_window_20220224204424.cc  native_window_20220224204427.cc  native_window_20220224204449.cc  native_window_20220224204451.cc  native_window_20220224204452.cc  native_window_20220224204456.cc  native_window_20220224204458.cc  native_window_20220224204512.cc  native_window_20220224204517.cc  native_window_20220224204522.cc  native_window_20220224204524.cc  native_window_20220224204526.cc  native_window_20220224204535.cc
.history/shell/app/: electron_content_client_20220225172616.h  electron_content_client_20220225172701.h  electron_content_client_20220225172707.h  electron_content_client_20220225172710.h  electron_content_client_20220225172715.h  electron_content_client_20220225172744.h  electron_content_client_20220225172746.h  electron_content_client_20220225172750.h  electron_content_client_20220225172806.h  electron_content_client_20220225172807.h  electron_content_client_20220225172809.h  electron_content_client_20220225172819.h  electron_content_client_20220225172820.h  electron_content_client_20220225172824.h  electron_content_client_20220225172827.h  electron_content_client_20220225172829.h  electron_content_client_20220225172835.h  electron_content_client_20220225172838.h  electron_content_client_20220225172854.h  electron_content_client_20220225172856.h  electron_content_client_20220225172955.cc  electron_content_client_20220225172959.cc  electron_content_client_20220225173001.cc  electron_content_client_20220225173004.cc  electron_content_client_20220225173029.cc  electron_library_main_20220217233528.mm  electron_library_main_20220225222543.mm  electron_library_main_20220225222548.mm  electron_library_main_20220225222552.mm  electron_library_main_20220225222553.mm  electron_library_main_20220225222635.mm  electron_library_main_20220225222656.mm  electron_library_main_20220225222726.mm  electron_library_main_20220225222728.mm  electron_library_main_20220225222737.mm  electron_library_main_20220225222739.mm  electron_main_delegate_20220214214652.h  electron_main_delegate_20220218111011.cc  electron_main_delegate_20220218112102.cc  electron_main_delegate_20220218112116.cc  (+128 more)
.history/shell/browser/: browser_20220218094319.h  browser_20220224183101.h  browser_20220224183104.h  browser_20220224183114.h  browser_20220224200608.h  browser_20220224200609.h  browser_20220224200613.h  browser_20220224200622.h  browser_20220224200624.h  browser_20220224200644.h  browser_20220224200649.h  browser_20220224200652.h  browser_20220224200701.h  browser_20220224200704.h  browser_20220224200706.h  browser_20220224201037.h  browser_20220224201040.h  browser_20220224201043.h  browser_20220224201116.h  browser_20220224201120.h  browser_20220224201122.h  browser_20220224201143.h  browser_20220224201150.h  browser_20220224201157.h  browser_20220224213041.h  browser_20220224213045.h  browser_20220224213546.h  browser_20220224213553.h  browser_20220224213602.h  browser_20220224213617.h  browser_20220224213632.h  browser_20220224213634.h  browser_20220224213827.h  browser_20220224213837.cc  browser_20220224213839.cc  browser_20220224213848.cc  browser_20220224213852.cc  browser_20220224213855.cc  browser_20220224213856.cc  browser_20220224213857.cc  (+397 more)
.history/shell/common/: application_info_20220218094158.h  application_info_20220225181114.h  application_info_20220225181116.h  application_info_20220225181123.h  application_info_20220225182000.h  application_info_mac_20220225182327.mm
.history/shell/renderer/: electron_renderer_client_20220225170824.h  electron_renderer_client_20220225172459.h  electron_renderer_client_20220225172507.h  electron_renderer_client_20220225173428.cc  electron_renderer_client_20220225180220.cc  electron_renderer_client_20220225180228.cc  electron_renderer_client_20220225180233.cc
.history/shell/renderer/resources/mac/: electron_renderer_client_20220224110930.h  electron_renderer_client_20220224110944.cc  electron_renderer_client_20220224110948.cc
.history/shell/utility/: electron_content_utility_client_20220225181437.h  electron_content_utility_client_20220225181448.cc  electron_content_utility_client_20220225181501.h  electron_content_utility_client_20220225181503.h  electron_content_utility_client_20220225181519.cc  electron_content_utility_client_20220225181526.cc  electron_content_utility_client_20220225181530.cc  electron_content_utility_client_20220225181532.cc  electron_content_utility_client_20220225181535.cc  electron_content_utility_client_20220225181542.cc  electron_content_utility_client_20220225181545.cc  electron_content_utility_client_20220225183227.h
.history/shell/views/: CrShellWindow_20220225164810.mm
chromium_src/: BUILD.gn
default_app/: main.ts
electron-web-builder/: .eslintrc.json  index.html  package.json  (+3 more)
(+291 files in other folders)
