auto_filenames = {
  api_docs = [
    "docs/api/accelerator.md",
    "docs/api/app.md",
    "docs/api/auto-updater.md",
    "docs/api/browser-view.md",
    "docs/api/browser-window.md",
    "docs/api/client-request.md",
    "docs/api/clipboard.md",
    "docs/api/command-line-switches.md",
    "docs/api/command-line.md",
    "docs/api/content-tracing.md",
    "docs/api/context-bridge.md",
    "docs/api/cookies.md",
    "docs/api/crash-reporter.md",
    "docs/api/debugger.md",
    "docs/api/desktop-capturer.md",
    "docs/api/dialog.md",
    "docs/api/dock.md",
    "docs/api/download-item.md",
    "docs/api/environment-variables.md",
    "docs/api/extensions.md",
    "docs/api/file-object.md",
    "docs/api/global-shortcut.md",
    "docs/api/in-app-purchase.md",
    "docs/api/incoming-message.md",
    "docs/api/ipc-main.md",
    "docs/api/ipc-renderer.md",
    "docs/api/menu-item.md",
    "docs/api/menu.md",
    "docs/api/message-channel-main.md",
    "docs/api/message-port-main.md",
    "docs/api/native-image.md",
    "docs/api/native-theme.md",
    "docs/api/net-log.md",
    "docs/api/net.md",
    "docs/api/notification.md",
    "docs/api/power-monitor.md",
    "docs/api/power-save-blocker.md",
    "docs/api/process.md",
    "docs/api/protocol.md",
    "docs/api/safe-storage.md",
    "docs/api/screen.md",
    "docs/api/service-workers.md",
    "docs/api/session.md",
    "docs/api/share-menu.md",
    "docs/api/shell.md",
    "docs/api/structures",
    "docs/api/synopsis.md",
    "docs/api/system-preferences.md",
    "docs/api/touch-bar-button.md",
    "docs/api/touch-bar-color-picker.md",
    "docs/api/touch-bar-group.md",
    "docs/api/touch-bar-label.md",
    "docs/api/touch-bar-other-items-proxy.md",
    "docs/api/touch-bar-popover.md",
    "docs/api/touch-bar-scrubber.md",
    "docs/api/touch-bar-segmented-control.md",
    "docs/api/touch-bar-slider.md",
    "docs/api/touch-bar-spacer.md",
    "docs/api/touch-bar.md",
    "docs/api/tray.md",
    "docs/api/web-contents.md",
    "docs/api/web-frame-main.md",
    "docs/api/web-frame.md",
    "docs/api/web-request.md",
    "docs/api/webview-tag.md",
    "docs/api/window-open.md",
    "docs/api/structures/bluetooth-device.md",
    "docs/api/structures/certificate-principal.md",
    "docs/api/structures/certificate.md",
    "docs/api/structures/cookie.md",
    "docs/api/structures/cpu-usage.md",
    "docs/api/structures/crash-report.md",
    "docs/api/structures/custom-scheme.md",
    "docs/api/structures/desktop-capturer-source.md",
    "docs/api/structures/display.md",
    "docs/api/structures/event.md",
    "docs/api/structures/extension-info.md",
    "docs/api/structures/extension.md",
    "docs/api/structures/file-filter.md",
    "docs/api/structures/file-path-with-headers.md",
    "docs/api/structures/gpu-feature-status.md",
    "docs/api/structures/hid-device.md",
    "docs/api/structures/input-event.md",
    "docs/api/structures/io-counters.md",
    "docs/api/structures/ipc-main-event.md",
    "docs/api/structures/ipc-main-invoke-event.md",
    "docs/api/structures/ipc-renderer-event.md",
    "docs/api/structures/jump-list-category.md",
    "docs/api/structures/jump-list-item.md",
    "docs/api/structures/keyboard-event.md",
    "docs/api/structures/keyboard-input-event.md",
    "docs/api/structures/memory-info.md",
    "docs/api/structures/memory-usage-details.md",
    "docs/api/structures/mime-typed-buffer.md",
    "docs/api/structures/mouse-input-event.md",
    "docs/api/structures/mouse-wheel-input-event.md",
    "docs/api/structures/new-window-web-contents-event.md",
    "docs/api/structures/notification-action.md",
    "docs/api/structures/notification-response.md",
    "docs/api/structures/payment-discount.md",
    "docs/api/structures/point.md",
    "docs/api/structures/post-body.md",
    "docs/api/structures/printer-info.md",
    "docs/api/structures/process-memory-info.md",
    "docs/api/structures/process-metric.md",
    "docs/api/structures/product-discount.md",
    "docs/api/structures/product-subscription-period.md",
    "docs/api/structures/product.md",
    "docs/api/structures/protocol-request.md",
    "docs/api/structures/protocol-response-upload-data.md",
    "docs/api/structures/protocol-response.md",
    "docs/api/structures/rectangle.md",
    "docs/api/structures/referrer.md",
    "docs/api/structures/scrubber-item.md",
    "docs/api/structures/segmented-control-segment.md",
    "docs/api/structures/serial-port.md",
    "docs/api/structures/service-worker-info.md",
    "docs/api/structures/shared-worker-info.md",
    "docs/api/structures/sharing-item.md",
    "docs/api/structures/shortcut-details.md",
    "docs/api/structures/size.md",
    "docs/api/structures/task.md",
    "docs/api/structures/thumbar-button.md",
    "docs/api/structures/trace-categories-and-options.md",
    "docs/api/structures/trace-config.md",
    "docs/api/structures/transaction.md",
    "docs/api/structures/upload-data.md",
    "docs/api/structures/upload-file.md",
    "docs/api/structures/upload-raw-data.md",
    "docs/api/structures/user-default-types.md",
    "docs/api/structures/web-request-filter.md",
    "docs/api/structures/web-source.md",
  ]

  sandbox_bundle_deps = [

  ]

  isolated_bundle_deps = [

  ]

  browser_bundle_deps = [
    "lib/browser/init.ts",
    "package.json",
    "tsconfig.electron.json",
    "tsconfig.json",
  ]
}