filenames = {
    default_app_ts_sources = [
        "default_app/main.ts",
    ]

    default_app_static_sources = [
        "default_app/icon.png",
        "default_app/index.html",
        "default_app/package.json",
        "default_app/styles.css",
    ]

    default_app_octicon_sources = [
        "node_modules/@primer/octicons/build/build.css",
        "node_modules/@primer/octicons/build/svg/book-24.svg",
        "node_modules/@primer/octicons/build/svg/code-square-24.svg",
        "node_modules/@primer/octicons/build/svg/gift-24.svg",
        "node_modules/@primer/octicons/build/svg/mark-github-16.svg",
        "node_modules/@primer/octicons/build/svg/star-fill-24.svg",
    ]

    framework_sources = [
        "shell/app/electron_library_main.h",
        "shell/app/electron_library_main.mm",
    ]

    lib_sources = [
        "shell/app/electron_content_client.h",
        "shell/app/electron_content_client.cc",
        "shell/app/electron_main_delegate.cc",
        "shell/app/electron_main_delegate.h",
        # "shell/browser/browser.h",
        # "shell/browser/browser.cc",
        # "shell/browser/browser_observer.h",
        "shell/browser/api/electron_api_app.cc",
        "shell/browser/api/electron_api_app.h",
        "shell/browser/electron_browser_client.cc",
        "shell/browser/electron_browser_client.h",        
        "shell/browser/electron_browser_main_parts.cc",
        "shell/browser/electron_browser_main_parts.h",
        "shell/browser/electron_gpu_client.cc",
        "shell/browser/electron_gpu_client.h",
        "shell/browser/feature_list.cc",
        "shell/browser/feature_list.h",
        "shell/browser/javascript_environment.h",
        "shell/browser/javascript_environment.cc",
        # "shell/browser/shell_browser_context.cc",
        # "shell/browser/shell_browser_context.h",
        # "shell/browser/shell_platform_delegate.h",
        # "shell/browser/shell.cc",
        # "shell/browser/shell.h",
        "shell/browser/native_window.cc",
        "shell/browser/native_window.h",
        "shell/browser/native_window_observer.h",
        "shell/browser/window_list.h",
        "shell/browser/window_list.cc",
        "shell/browser/window_list_observer.h",
       "shell/common/electron_command_line.cc",
       "shell/common/electron_command_line.h",
        # "shell/browser/api/electron_api_base_window.h",
        # "shell/browser/api/electron_api_base_window.cc",
        # "shell/browser/api/electron_api_browser_window.cc",
        # "shell/browser/api/electron_api_browser_window.h",
        # "shell/browser/api/electron_api_web_contents_view.cc",
        # "shell/browser/api/electron_api_web_contents_view.h",
        # "shell/browser/api/electron_api_view.cc",
        # "shell/browser/api/electron_api_view.h",
        # "shell/browser/api/electron_api_web_contents.cc",
        # "shell/browser/api/electron_api_web_contents.h",
        "shell/common/application_info.cc",
        "shell/common/application_info.h",
        "shell/common/gin_helper/arguments.cc",
        "shell/common/gin_helper/arguments.h",
        "shell/common/gin_converters/std_converter.h",
        "shell/common/electron_constants.cc",
        "shell/common/electron_constants.h",
        "shell/common/options_switches.cc",
        "shell/common/options_switches.h",
        "shell/common/electron_paths.h",
        "shell/common/gin_helper/dictionary.h",
        "shell/common/node_bindings.cc",
        "shell/common/node_bindings.h",
        "shell/common/node_includes.h",
        "shell/utility/electron_content_utility_client.h",
        "shell/utility/electron_content_utility_client.cc",
        "shell/renderer/electron_renderer_client.cc",
        "shell/renderer/electron_renderer_client.h",
                
    ]

    lib_sources_mac = [
        "shell/app/electron_main_delegate_mac.h",
        "shell/app/electron_main_delegate_mac.mm",
        "shell/browser/electron_browser_main_parts_mac.mm",
        "shell/browser/mac/electron_application.h",
        "shell/browser/mac/electron_application.mm",
        "shell/browser/mac/electron_application_delegate.h",
        "shell/browser/mac/electron_application_delegate.mm",
        "shell/browser/native_window_mac.mm",
        "shell/browser/native_window_mac.h",
        # "shell/browser/api/electron_api_browser_window_mac.mm",
        # "shell/browser/api/electron_api_browser_window_mac.h",
        # "shell/browser/ui/electron_inspectable_web_contents_view.h",
        # "shell/browser/ui/electron_inspectable_web_contents_view.mm",
        # "shell/browser/ui/inspectable_web_contents_view.h",
        # "shell/browser/ui/inspectable_web_contents_view_mac.mm",
        # "shell/browser/ui/inspectable_web_contents_view_mac.h",
        "shell/browser/ui/cocoa/electron_native_widget_mac.mm",
        "shell/browser/ui/cocoa/electron_native_widget_mac.h",
        "shell/browser/ui/cocoa/electron_ns_window_delegate.mm",
        "shell/browser/ui/cocoa/electron_ns_window_delegate.h",
        "shell/browser/ui/cocoa/electron_ns_window.mm",
        "shell/browser/ui/cocoa/electron_ns_window.h",
        "shell/browser/ui/cocoa/electron_preview_item.mm",
        "shell/browser/ui/cocoa/electron_preview_item.h",
        "shell/browser/ui/cocoa/root_view_mac.mm",
        "shell/browser/ui/cocoa/root_view_mac.h",
        # "shell/browser/shell_platform_delegate_mac.mm",
        "shell/common/application_info_mac.mm",
        "shell/common/mac/main_application_bundle.h",
        "shell/common/mac/main_application_bundle.mm",
        "shell/common/node_bindings_mac.cc",
        "shell/common/node_bindings_mac.h",
        "shell/views/CrShellWindow.h",
        "shell/views/CrShellWindow.mm",
    ]

    my_lib = [
        "shell/views/shell.cc",
        "shell/views/shell.h",
        "shell/views/shell_browser_context.cc",
        "shell/views/shell_browser_context.h",
        "shell/views/shell_platform_delegate_mac.mm",
        # "shell/views/shell_platform_delegate.cc",
        "shell/views/shell_platform_delegate.h",
        "shell/views/shell_download_manager_delegate.h",
        "shell/views/shell_download_manager_delegate.cc",
        "shell/views/shell_switches.cc",
        "shell/views/shell_switches.h",    
    ]
}